Text layer in VSE causing crash on .blend file startup #50112

Closed
opened 2016-11-25 02:05:11 +01:00 by Pug Nippets · 9 comments

System Information
Windows 7, GeForce GTX 760

Blender Version
Broken: 2.77 22a2853

Short description of error
When I load this file, it crashes on startup in 2.77. It also:

  • crashes with Load UI unchecked
  • crashes with Trusted Source unchecked
  • crashes after resetting to factory settings
  • crashes on appending the scene to a new .blend file
  • crashes using older and newer versions of blender (2.74 and a steam version of .78a)
  • crashes with all combinations of the above.

I've successfully loaded the .blend1 version of the file and rendered out what I had. However, the blender crashes as soon as you move over the Text effect strip in the VSE. It also appears in the file as {null} http://i.imgur.com/TASYrSt.png

Exact steps for others to reproduce the error
Open the file. Sorry if that isn't very detailed; it's as far as I can get.

another free poop.blend

Thanks for taking the time to look at this, thanks for all your hard work and sorry if I've missed anything or made any mistakes.

**System Information** Windows 7, GeForce GTX 760 **Blender Version** Broken: 2.77 22a2853 **Short description of error** When I load this file, it crashes on startup in 2.77. It also: - crashes with Load UI unchecked - crashes with Trusted Source unchecked - crashes after resetting to factory settings - crashes on appending the scene to a new .blend file - crashes using older and newer versions of blender (2.74 and a steam version of .78a) - crashes with all combinations of the above. I've successfully loaded the .blend1 version of the file and rendered out what I had. However, the blender crashes as soon as you move over the Text effect strip in the VSE. It also appears in the file as {null} http://i.imgur.com/TASYrSt.png **Exact steps for others to reproduce the error** Open the file. Sorry if that isn't very detailed; it's as far as I can get. [another free poop.blend](https://archive.blender.org/developer/F406017/another_free_poop.blend) Thanks for taking the time to look at this, thanks for all your hard work and sorry if I've missed anything or made any mistakes.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Pugnippets

Added subscriber: @Pugnippets

Added subscriber: @Funkster-3

Added subscriber: @Funkster-3

Crash confirmed on Linux x64, it's falling over in intern/readfile.c - direct_link_scene() where it tries to set seq->strip->proxy->anim to NULL but proxy itself is NULL so it segfaults. Perhaps this file expects proxy data (do you have proxy data on disk OP, or is this someone else's file?) and this function cannot cope if it is not found?

Just for yuks I tried adding a check for proxy == NULL and cleared the SEQ_USE_PROXY bit of seq->flag if true, and it loads fine (though there is still something amiss as it crashes in an infinite loop in my strip-relative frame offset calculation routine, as per #49658).

Presumably this file is from some older version of Blender, and the conversion routines cannot cope with a combination of set SEQ_USE_PROXY bit and missing proxy data?

I saved the resulting file and it now opens with unmodified 2.78:
another free poop 2.78.blend

Crash confirmed on Linux x64, it's falling over in intern/readfile.c - direct_link_scene() where it tries to set seq->strip->proxy->anim to NULL but proxy itself is NULL so it segfaults. Perhaps this file expects proxy data (do you have proxy data on disk OP, or is this someone else's file?) and this function cannot cope if it is not found? Just for yuks I tried adding a check for proxy == NULL and cleared the SEQ_USE_PROXY bit of seq->flag if true, and it loads fine (though there is still something amiss as it crashes in an infinite loop in my strip-relative frame offset calculation routine, as per #49658). Presumably this file is from some older version of Blender, and the conversion routines cannot cope with a combination of set SEQ_USE_PROXY bit and missing proxy data? I saved the resulting file and it now opens with unmodified 2.78: [another free poop 2.78.blend](https://archive.blender.org/developer/F406102/another_free_poop_2.78.blend)

FWIW I've made a diff for the patch that stops it crashing.

FWIW I've made a diff for the patch that stops it crashing.
Author

Wow, thanks so much Olly. I might just be able to recover the stuff I couldn't from the backup.

It's my file. I don't know if it's using proxy data; I'm not sure what that is. I'm assuming you mean a proxy file instead of the original file, but it's meant to be a text effect strip so there's no data on the disk. How do I find out?

Also let me know if there's anything else you need.

Wow, thanks so much Olly. I might just be able to recover the stuff I couldn't from the backup. It's my file. I don't know if it's using proxy data; I'm not sure what that is. I'm assuming you mean a proxy file instead of the original file, but it's meant to be a text effect strip so there's no data on the disk. How do I find out? Also let me know if there's anything else you need.

TBH I didn't see anything specific to text strips in the debugger - it fails trying to load proxies on the following sequences:

frerf.948
frerf.001
frerf.016
frerf.mp4
frerf.077
power rangers 3..001
Scene.004
Scene.001
Scene
Scene.002

and many more but I'm bored of typing them here :o)

Nothing specific to text strips, perhaps it was just coincidence and the file got corrupted at the same time as you added the text strip?

TBH I didn't see anything specific to text strips in the debugger - it fails trying to load proxies on the following sequences: frerf.948 frerf.001 frerf.016 frerf.mp4 frerf.077 power rangers 3..001 Scene.004 Scene.001 Scene Scene.002 and many more but I'm bored of typing them here :o) Nothing specific to text strips, perhaps it was just coincidence and the file got corrupted at the same time as you added the text strip?

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 2580c3cb82

This issue was referenced by 2580c3cb82bd968e84b9e756f9df529bbe161d68
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50112
No description provided.