Fix T50112: Sequencer crash w/ missing proxy data